nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myweb-app
  labels:
    app: myweb-app-v1
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: myweb-app-v1
