nginx-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myweb-app-lb
spec:
  backend:
    serviceName: myweb-app
    servicePort: 80
